doplnění část-minetest.conf

--- a/část-minetest.conf
+++ b/část-minetest.conf
@@ -1,4 +1,15 @@
+# Odstranit barevné kódy z příchozích zpráv četu
+strip_color_codes = true
+
+# Hra
+
+# default_game = minetest
+# Zpráva zobrazovaná hráčům při připojení
+motd = Vítejte v Českém hvozdu!
+
 # Vyhozené předměty budou existovat X sekund.
+# item_entity_ttl = 900
+# item_entity_ttl = 1296000 # 15 dní
 item_entity_ttl = 31622400
 
 # Výchozí maximální velikost dávky
@@ -10,24 +21,45 @@ enable_damage = true
 # Vypnout kreativní mód
 creative_mode = false
 
+# Maximální vzdálenost, na kterou se hráči/ky „vidí“
+player_transfer_distance = 10
+
 # Vypnout PvP
 enable_pvp = false
 
-# vypnout podporu kanálů módů
+# Vypnout podporu kanálů módů
 enable_mod_channels = false
 
 # Nastavit místo spawnu(!)
 static_spawnpoint = -70,9.5,40
 
+# chat_message_format = <@name> @message
+# chatcommand_msg_time_threshold = 0.1
+
 kick_msg_shutdown = Server se vypíná.
+
 kick_msg_crash = Na serveru nastala vnitřní chyba. V důsledku toho budete nyní odpojen/a.
+
+# ?
 ask_reconnect_on_crash = true
+
+# Klient má dohlédnout na objekty na vzdálenost N mapových bloků.
+active_object_send_range_blocks = 16
+
+# Do vzdálenosti N mapových bloků jsou všechny aktivní.
+active_block_range = 4
+
+# Posílat klientovi údaje o blocích do vzdálenosti N mapových bloků.
+max_block_send_distance = 24
 
 # Maximální počet vynuceně načtených bloků
 max_forceloaded_blocks = 700
 
-# Rychlost času:
-time_speed = 24
+# Jak často se klientům posílá herní čas
+time_send_interval = 5
+
+# Jak často ukládat změny do databáze:
+server_map_save_interval = 15.3
 
 # Maximální délka zprávy:
 chat_message_max_size = 500
@@ -39,10 +71,18 @@ chat_message_limit_trigger_kick = 50
 # Častěji aktualizovat kapaliny
 liquid_update = 0.25
 
+block_send_optimize_distance = 4
+
 ## Bezpečnost
 
+#    Prevent mods from doing insecure things like running shell commands.
 secure.enable_security = true
 secure.trusted_mods = jitprofiler
+
+#    Comma-separated list of mods that are allowed to access HTTP APIs, which
+#    allow them to upload and download data to/from the internet.
+#    type: string
+# secure.http_mods =
 
 # Klient a server
 
@@ -52,10 +92,35 @@ name = Administrace
 # Jazyk lokalizace
 language = cs
 
+# Minimální úroveň na protokolování do debug.txt
+# (none, error, warning, action, info, verbose)
+debug_log_level = action
+
+# Limit na velikost debug.txt v megabajtech
+debug_log_size_max = 500
+
+# Minimální úroveň na protokolování do četu
+chat_log_level = error
+
+# Nezapínat IPv6
+# enable_ipv6 = true
+
+# Vypnout CSM
+csm_restriction_flags = 0
+
 # Generátor mapy
 
 mg_name = flat
+# water_level = 1
+# max_block_generate_distance = 10
+
+# Definuje výchozí velikost světa (max. hodnota může být 31007)
+# Pro změnu je potřeba upravit definici world.mt
 mapgen_limit = 4096
+
+# mg_flags = caves,dungeons,light,decorations,biomes,ores
+
+# Změna parametrů, aby se tvořily větší biomy.
 mg_biome_np_heat = {
    offset      = 50,
    scale       = 50,
@@ -66,20 +131,31 @@ mg_biome_np_heat = {
    lacunarity  = 2.0,
    flags       = eased
 }
+
 mgflat_spflags = lakes,hills,caverns
+# mgflat_ground_level = 8
 mgflat_large_cave_depth = -100
 mgflat_small_cave_num_min = 0
 mgflat_small_cave_num_max = 0
 mgflat_large_cave_num_min = 0
 mgflat_large_cave_num_max = 4
 mgflat_large_cave_flooded = 0.5
+# Důležité — vypíná tunely
 mgflat_cave_width = 11.0
 mgflat_lake_threshold = -0.4
+# mgflat_lake_steepness = 48.0
+# mgflat_hill_threshold = 0.45
+# mgflat_hill_steepness = 64.0
 mgflat_cavern_limit = -256
 mgflat_cavern_taper = 256
 mgflat_cavern_threshold = 0.6
 mgflat_dungeon_ymin = -31000
 mgflat_dungeon_ymax = -30000
+
+# Používat 1 vlákno na generování mapy, protože víc vláken vede k poškozené mapě
+num_emerge_threads = 1
+
+world_config_selected_mod = 11
 
 # Zapnout částice:
 enable_particles = true
@@ -96,8 +172,8 @@ enable_weather = false
 advtrains_show_ids = true
 
 # mód birds
-birds.minBirds = 8
-birds.spawnAltitude = 40
+birds.minBirds = 16
+birds.spawnAltitude = 50
 birds.maxSwarmSize = 1
 
 # mód cottages
@@ -114,9 +190,6 @@ mob_show_health = true
 enable_peaceful_player = true
 mobs_can_hear = false
 
-# mód pipeworks
-pipeworks_entity_update_interval = 0.8
-
 # mód redef
 redef_3d_ladders = false
 redef_show_steps = false
@@ -130,7 +203,7 @@ ropes_can_extend_into_airlike = true
 
 # mód shadows
 shadows.decay_minimum_light = 0
-shadows.time_budget = 400
+shadows.time_budget = 100
 shadows.decay_factor_dark = 0.92
 shadows.decay_factor_bright = 0.9
 
@@ -140,6 +213,7 @@ towercrane_rope_length = 1024
 # mód travelnet
 travelnet.travelnet_effect_enabled = true
 travelnet.MAX_STATIONS_PER_NETWORK = 240
+travelnet.is_free = false
 
 # mód unified_inventory
 unified_inventory_lite = false
@@ -149,3 +223,17 @@ unified_inventory_automatic_categorization = false
 ch_expect_clothing = true
 ch_expect_compactor = true
 ch_expect_technic = true
+ch_zacatek_2 = (-68.0,8.5,10.0)
+ch_zacatek_3 = (-86.0,9.5,-811.0)
+# pozice vězení:
+ch_vezeni_min = (-66,0,45)
+ch_vezeni_max = (-29,4,50)
+ch_vezeni_cil = (-50.273,0.5,47.022)
+ch_vezeni_dvere = (-52,1,45)
+# truhla na povinné výtisky knih:
+ch_povinne_vytisky = (-192,4,-879)
+ch_povinne_vytisky_listname = main
+# zákaz vstupu do výšky nad y=1024
+ch_forbidden_height = true
+# penalizace při sražení vlakem:
+ch_player_overrun_penalty = true
