[ch_overrides,ch_overrides_gplv3] kód rozšiřující advtrains přesunut

--- a/mods/ch_modpack/ch_overrides_gplv3/mod.conf
+++ b/mods/ch_modpack/ch_overrides_gplv3/mod.conf
@@ -1,3 +1,4 @@
 name = ch_overrides_gplv3
 description = Vlastní úpravy serveru Český hvozd podléhající GPLv3
-optional_depends = ch_overrides
+depends = ch_core
+optional_depends = advtrains,advtrains_interlocking,advtrains_signals_ks,ch_overrides
