[ch_core,*] oddělení charinfo do módu ch_data (1. verze)

--- a/mods/stamina/mod.conf
+++ b/mods/stamina/mod.conf
@@ -1,4 +1,4 @@
 name = stamina
 depends = default, hudbars
-optional_depends = 3d_armor, ch_core, player_monoids, pova
+optional_depends = 3d_armor, ch_data, player_monoids, pova
 description = Adds stamina, hunger and drunk effects.
