--- a/mods/3d_armor_flyswim/mod.conf
+++ b/mods/3d_armor_flyswim/mod.conf
@@ -1,6 +1,6 @@
 name = 3d_armor_flyswim
 description = Adds Flying, Swimming, Crouching and Climbing animations to base character model for 3d_armor
-depends = ch_core, player_api
+depends = ch_data, player_api
 optional_depends = 3d_armor, simple_skins, skinsdb, clothing
 author = Sirrobzeroone
 title = Add Fly, Swim, Crouch and Climb animations
