--- a/mods/ch_modpack/ch_overrides_gplv3/mod.conf
+++ b/mods/ch_modpack/ch_overrides_gplv3/mod.conf
@@ -1,4 +1,4 @@
 name = ch_overrides_gplv3
 description = Vlastní úpravy serveru Český hvozd podléhající GPLv3
-depends = ch_core
+depends = ch_core, ch_data
 optional_depends = advtrains,advtrains_interlocking,advtrains_signals_ks,ch_overrides
