--- a/mods/basic_trains/advtrains_train_subway/mod.conf
+++ b/mods/basic_trains/advtrains_train_subway/mod.conf
@@ -4,3 +4,4 @@ description=Subway train set for Advanced Trains
 author=orwell96
 
 depends=advtrains,advtrains_train_track
+optional_depends=advtrains_livery_database,advtrains_livery_designer
