--- a/část-minetest.conf
+++ b/část-minetest.conf
@@ -190,6 +190,9 @@ mob_show_health = true
 enable_peaceful_player = true
 mobs_can_hear = false
 
+# mód pipeworks
+pipeworks_entity_update_interval = 0.5
+
 # mód redef
 redef_3d_ladders = false
 redef_show_steps = false
