[orienteering] redukce režimů minimapy na 3+3
- [ch_data] odstraněny zapomenuté ladicí výpisy
- minetest.conf: vypnutí server_side_culling kvůli minimapě

--- a/část-minetest.conf
+++ b/část-minetest.conf
@@ -52,6 +52,12 @@ active_block_range = 4
 # Posílat klientovi údaje o blocích do vzdálenosti N mapových bloků.
 max_block_send_distance = 24
 
+# Nad tuto vzdálenost optimalizovat odesílání bloků (může způsobit chyby vykreslení v jeskyních)
+block_send_optimize_distance = 4
+
+# Vypnout neodesílání bloků za překážkami (kvůli minimapě a radaru)
+server_side_occlusion_culling = false
+
 # Maximální počet vynuceně načtených bloků
 max_forceloaded_blocks = 700
 
@@ -70,8 +76,6 @@ chat_message_limit_trigger_kick = 50
 
 # Častěji aktualizovat kapaliny
 liquid_update = 0.25
-
-block_send_optimize_distance = 4
 
 ## Bezpečnost
 
@@ -159,6 +163,8 @@ world_config_selected_mod = 11
 
 # Zapnout částice:
 enable_particles = true
+
+enable_remote_media_server = false
 
 ### Nastavení módů
 
