[*] osvětlení lokomotiv a osobních vagonů
- [advtrains_train_zugspitzbahn] přidána nová motorová jednotka (experimentální)

--- a/mods/advtrains_train_zugspitzbahn/mod.conf
+++ b/mods/advtrains_train_zugspitzbahn/mod.conf
@@ -1,6 +1,6 @@
 name = advtrains_train_zugspitzbahn
 description = A locomotive and passenger wagon of the Bavarian Zugspitzbahn
 depends = advtrains
-optional_depends = intllib
+optional_depends = advtrains_attachment_offset_patch, intllib
 author = MBB
 title = Advtrains Zugspitzbahn
