[ch_core,ch_overrides_mg] nové textury skla také pro dveře a desky (xpanes)

--- a/mods/ch_modpack/ch_core/mod.conf
+++ b/mods/ch_modpack/ch_core/mod.conf
@@ -1,4 +1,4 @@
 name = ch_core
 description = Vlastní úpravy serveru Český hvozd
-depends = ch_base, ch_data, ch_time, basic_materials, default, doors, dye, player_api, screwdriver, sethome, wool
+depends = ch_base, ch_data, ch_time, basic_materials, default, doors, dye, player_api, screwdriver, sethome, wool, xpanes
 optional_depends = emote, hudbars, wielded_light
