[fireworks_reimagined] adaptace a lokalizace módu

--- a/mods/fireworks_reimagined/mod.conf
+++ b/mods/fireworks_reimagined/mod.conf
@@ -2,5 +2,5 @@ name = fireworks_reimagined
 description = A fireworks api to allow you to easily add new fireworks to your server or game.
 author = DragonWrangler1
 title = FireWorks Reimagined
-depends = mesecons, farming
+depends = ch_core, mesecons, farming
 optional_depends = default
