--- a/mods/birds/mod.conf
+++ b/mods/birds/mod.conf
@@ -1,7 +1,7 @@
 title=Birds
 name=birds
 description=Adds birds. If supported animal mod is found, they drop raw chicken upon death.
-depends=
+depends=ch_time
 optional_depends=mobs_animal, animalia
 author=shaft
 
