[ch_extras] přidána linková cedule
- [display_api] přidána základní podpora pro color4dir cedule

--- a/mods/ch_modpack/ch_extras/mod.conf
+++ b/mods/ch_modpack/ch_extras/mod.conf
@@ -1,4 +1,4 @@
 name = ch_extras
 description = Další bloky, nástroje apod. pro Český hvozd
 depends = ch_core, ch_time, default, doors, moreblocks, player_api, screwdriver, unifieddyes, unified_inventory
-optional_depends = animalworld, anvil, bakedclay, charcoal, ch_npc, mobs, moreores, homedecor_gastronomy, home_workshop_machines, mesecons_switch, not_wuzzy_dice, pkarcs, summer, technic, technic_cnc, what_is_this_uwu, wrench
+optional_depends = animalworld, anvil, bakedclay, charcoal, ch_npc, display_api, font_api, mobs, moreores, homedecor_gastronomy, home_workshop_machines, mesecons_switch, not_wuzzy_dice, pkarcs, signs_api, summer, technic, technic_cnc, what_is_this_uwu, wrench
