[drawers] implementovány veřejné zásobníky

--- a/mods/drawers/mod.conf
+++ b/mods/drawers/mod.conf
@@ -1,5 +1,5 @@
 name = drawers
 description = Storage Drawers - A Mod adding simple storages for items and blocks, showing the item's inventory image in the front.
-depends = ch_base
+depends = ch_core
 optional_depends = default, mcl_core, screwdriver, pipeworks, moreores, digilines, mesecons_mvps, moretrees, unifieddyes, wrench
 min_minetest_version = 5.0
