[nameznik] adaptace módu

--- a/mods/nameznik/mod.conf
+++ b/mods/nameznik/mod.conf
@@ -4,5 +4,5 @@ description=Námezník / Fouling point, place where ends wide between tracks eno
 author=MatyasP
 version=10111
 
-depends=
+depends=ch_core
 optional_depends=repainter
