--- a/mods/snowmen/mod.conf
+++ b/mods/snowmen/mod.conf
@@ -1,3 +1,3 @@
 name = snowmen
 description = Adds the ability to make a snowman.
-depends = ch_base, default
+depends = ch_base, default, christmas_decor
